<resources>
    <string name="app_name">IRC Client</string>

    <string name="red">RED</string>
    <string name="blue">BLUE</string>
    <string name="green">GREEN</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="navigation_overview">Overview</string>
    <string name="navigation_settings">Settings</string>
    <string name="navigation_about">About</string>
    <string name="action_add_server">Add server</string>

    <string name="action_cancel">Cancel</string>
    <string name="action_save">Save</string>
    <string name="action_ok">Ok</string>
    <string name="action_add">Add</string>

    <string name="server">Server</string>
    <string name="server_title">Title</string>
    <string name="server_host">Host</string>
    <string name="server_port">Port</string>
    <string name="channels">Channels</string>
    <string name="nickname">Nickname</string>
    <string name="authentication">Authentication</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="channel_add_description">These channels will be automatically joined after connect.</string>


    <string name="auth_description">Authentication</string>
    <string name="auth_password">Password</string>
    <string name="auth_username">Username</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
