<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="xyz.sonbn.ircclient.activity.AuthenticationActivity">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:padding="5dp">
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/auth_description"
            android:padding="5dp" />
        <TextView
            android:id="@+id/sasl_label_username"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/auth_username"
            android:enabled="false" />
        <EditText
            android:id="@+id/sasl_username"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:enabled="false" />
        <TextView
            android:id="@+id/sasl_label_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/auth_password"
            android:enabled="false"/>
        <EditText
            android:id="@+id/sasl_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:password="true" />
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/ok"
                android:text="@string/action_ok"
                android:minWidth="90dp" />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/cancel"
                android:text="@string/action_cancel"
                android:minWidth="90dp" />
        </LinearLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
