<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_gravity="start"
             android:background="@android:color/white"
             android:clickable="true"
             android:focusable="true"
             android:fitsSystemWindows="true"
             android:paddingTop="24dp">

    <LinearLayout
        android:id="@+id/drawer_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/abc_action_bar_default_height_material"
            android:elevation="4dp"
            android:layout_toRightOf="@id/icon"
            android:layout_centerVertical="true"
            android:paddingLeft="16dp"
            android:drawablePadding="8dp"
            android:layout_marginBottom="4dp"
            android:gravity="center_vertical"
            android:textColor="@color/colorPrimary"
            android:textSize="32dp"
            android:text="@string/app_name"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:clickable="true"
            android:fontFamily="sans-serif-medium"
            android:gravity="center_vertical"
            android:onClick="onOverview"
            android:paddingLeft="16dp"
            android:text="@string/navigation_overview"
            android:drawablePadding="4dp"
            android:textSize="14sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="4dp"
            android:layout_marginTop="4dp"/>

        <TextView
            android:id="@+id/drawer_empty_servers"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:clickable="true"
            android:fontFamily="sans-serif-medium"
            android:gravity="center_vertical"
            android:onClick="onSettings"
            android:drawablePadding="4dp"
            android:paddingLeft="16dp"
            android:text="@string/action_add_server"
            android:textSize="14sp" />

        <LinearLayout
            android:id="@+id/server_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        </LinearLayout>

    </LinearLayout>

</FrameLayout>